--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-08 Wed 15:51]
+#+CAPTION: Clock summary at [2017-03-08 Wed 17:08]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:53* |       |      | 100.0 |
+| *Total time*                                                                | *17:50* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:53   |       |      | 100.0 |
-| Active                                                                      |         | 16:53 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   4.8 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   2.6 |
-| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  17.6 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  30.0 |
-| COMPLETED Split include and source directories                              |         |       | 4:25 |  26.2 |
-| STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   1.1 |
-| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  10.7 |
-| STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.5 |
-| STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   0.8 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   4.8 |
+| Stories                                                                     | 17:50   |       |      | 100.0 |
+| Active                                                                      |         | 17:50 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   4.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   2.4 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  16.6 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  28.4 |
+| COMPLETED Split include and source directories                              |         |       | 5:22 |  30.1 |
+| STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   1.0 |
+| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  10.1 |
+| STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.4 |
+| STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   0.7 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   4.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -148,6 +148,7 @@ model due to this problem:
 
 *** COMPLETED Split include and source directories                    :story:
     CLOSED: [2017-03-08 Wed 14:39]
+    CLOCK: [2017-03-08 Wed 16:30]--[2017-03-08 Wed 16:50] =>  0:20
     CLOCK: [2017-03-08 Wed 15:52]--[2017-03-08 Wed 16:29] =>  0:37
     CLOCK: [2017-03-08 Wed 15:47]--[2017-03-08 Wed 15:51] =>  0:04
     CLOCK: [2017-03-08 Wed 15:16]--[2017-03-08 Wed 15:46] =>  0:30
