--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,24 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-08 Wed 17:08]
+#+CAPTION: Clock summary at [2017-03-08 Wed 17:51]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:50* |       |      | 100.0 |
+| *Total time*                                                                | *18:09* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:50   |       |      | 100.0 |
-| Active                                                                      |         | 17:50 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   4.6 |
+| Stories                                                                     | 18:09   |       |      | 100.0 |
+| Active                                                                      |         | 18:09 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   4.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   2.4 |
-| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  16.6 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  28.4 |
-| COMPLETED Split include and source directories                              |         |       | 5:22 |  30.1 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  16.3 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  27.9 |
+| COMPLETED Split include and source directories                              |         |       | 5:22 |  29.6 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   1.0 |
-| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  10.1 |
+| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |   9.9 |
 | STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.4 |
 | STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   0.7 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   4.6 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   4.5 |
+| STARTED Add C++-03 mode                                                     |         |       | 0:19 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -280,7 +281,8 @@ For now we removed the project and solution postfixes:
 : #DOGEN quilt.csharp.visual_studio.solution.postfix=_vs15_
 : #DOGEN quilt.csharp.visual_studio.project.postfix=_vc15_
 
-*** Add C++-03 mode                                                    :epic:
+*** STARTED Add C++-03 mode                                            :epic:
+    CLOCK: [2017-03-08 Wed 17:32]--[2017-03-08 Wed 17:51] =>  0:19
 
 #+begin_quote
 *Story*: As a dogen user, I want to create models in C++ 03 so that I
