--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,29 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-17 Fri 11:29]
+#+CAPTION: Clock summary at [2017-03-17 Fri 11:50]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *47:03* |       |       | 100.0 |
+| *Total time*                                                                | *47:23* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 47:03   |       |       | 100.0 |
-| Active                                                                      |         | 47:03 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   2.2 |
+| Stories                                                                     | 47:23   |       |       | 100.0 |
+| Active                                                                      |         | 47:23 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   2.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   0.9 |
 | COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   6.3 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  10.8 |
-| COMPLETED Split include and source directories                              |         |       |  5:22 |  11.4 |
-| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  17.7 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  10.7 |
+| COMPLETED Split include and source directories                              |         |       |  5:22 |  11.3 |
+| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  17.6 |
 | COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   5.6 |
 | COMPLETED Split project should not include model name                       |         |       |  0:18 |   0.6 |
 | COMPLETED Always add multiple databases to ODB options                      |         |       |  0:03 |   0.1 |
-| STARTED Fix issues with dropbox downloads                                   |         |       |  2:23 |   5.1 |
+| COMPLETED Fix issues with dropbox downloads                                 |         |       |  2:23 |   5.0 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       |  0:11 |   0.4 |
 | STARTED Build on tags for Windows                                           |         |       |  0:15 |   0.5 |
 | STARTED Add a "flat directory" mode                                         |         |       |  0:08 |   0.3 |
 | STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.5 |
-| STARTED Implement the database model using Northwind                        |         |       | 16:46 |  35.6 |
+| STARTED Implement the database model using Northwind                        |         |       | 17:06 |  36.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -270,7 +270,8 @@ At present we only add multiple databases when the user requests more
 than one database system. However, since we are asking for "common"
 this is causing problems. Always add this flag.
 
-*** STARTED Fix issues with dropbox downloads                         :story:
+*** COMPLETED Fix issues with dropbox downloads                       :story:
+    CLOSED: [2017-03-17 Fri 11:41]
     CLOCK: [2017-03-17 Fri 11:26]--[2017-03-17 Fri 11:29] =>  0:03
     CLOCK: [2017-03-17 Fri 11:19]--[2017-03-17 Fri 11:25] =>  0:06
     CLOCK: [2017-03-17 Fri 11:14]--[2017-03-17 Fri 11:18] =>  0:04
@@ -417,6 +418,7 @@ includes. There are some differences though:
   Visual Studio element we have visibility of all enabled versions.
 
 *** STARTED Implement the database model using Northwind              :story:
+    CLOCK: [2017-03-17 Fri 11:30]--[2017-03-17 Fri 11:50] =>  0:20
     CLOCK: [2017-03-16 Thu 19:39]--[2017-03-16 Thu 20:24] =>  0:45
     CLOCK: [2017-03-14 Tue 22:11]--[2017-03-14 Tue 22:31] =>  0:20
     CLOCK: [2017-03-14 Tue 21:40]--[2017-03-14 Tue 22:10] =>  0:30
@@ -461,7 +463,7 @@ Tasks:
   explained in [[http://www.codesynthesis.com/pipermail/odb-users/2013-May/001286.html][this email]]. We can force it by doing a query on that
   entity, but that then causes an exception.
 - =head -n 200 northwind_ascii.sql | grep ^INSERT | cut -b 1-150 | uniq=
-- paper: [[http://eduglopedia.org/resource/cea008e18dee42899aeff7a0c58dddaf8e9b5bc6/download][Adapting the Access Northwind Database to Support a Database Course]]
+- paper:
 
 Notes:
 
