--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,29 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-17 Fri 11:50]
+#+CAPTION: Clock summary at [2017-03-17 Fri 15:44]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *47:23* |       |       | 100.0 |
+| *Total time*                                                                | *49:01* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 47:23   |       |       | 100.0 |
-| Active                                                                      |         | 47:23 |       | 100.0 |
+| Stories                                                                     | 49:01   |       |       | 100.0 |
+| Active                                                                      |         | 49:01 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   2.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   0.9 |
-| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   6.3 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  10.7 |
-| COMPLETED Split include and source directories                              |         |       |  5:22 |  11.3 |
-| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  17.6 |
-| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   5.6 |
+| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   6.1 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  10.3 |
+| COMPLETED Split include and source directories                              |         |       |  5:22 |  10.9 |
+| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  17.0 |
+| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   5.4 |
 | COMPLETED Split project should not include model name                       |         |       |  0:18 |   0.6 |
 | COMPLETED Always add multiple databases to ODB options                      |         |       |  0:03 |   0.1 |
-| COMPLETED Fix issues with dropbox downloads                                 |         |       |  2:23 |   5.0 |
+| COMPLETED Fix issues with dropbox downloads                                 |         |       |  3:38 |   7.4 |
+| STARTED Create a UML profile to formalise yarn concepts                     |         |       |  0:23 |   0.8 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       |  0:11 |   0.4 |
 | STARTED Build on tags for Windows                                           |         |       |  0:15 |   0.5 |
 | STARTED Add a "flat directory" mode                                         |         |       |  0:08 |   0.3 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.5 |
-| STARTED Implement the database model using Northwind                        |         |       | 17:06 |  36.1 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.4 |
+| STARTED Implement the database model using Northwind                        |         |       | 17:06 |  34.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -272,6 +273,7 @@ this is causing problems. Always add this flag.
 
 *** COMPLETED Fix issues with dropbox downloads                       :story:
     CLOSED: [2017-03-17 Fri 11:41]
+    CLOCK: [2017-03-17 Fri 14:05]--[2017-03-17 Fri 15:20] =>  1:15
     CLOCK: [2017-03-17 Fri 11:26]--[2017-03-17 Fri 11:29] =>  0:03
     CLOCK: [2017-03-17 Fri 11:19]--[2017-03-17 Fri 11:25] =>  0:06
     CLOCK: [2017-03-17 Fri 11:14]--[2017-03-17 Fri 11:18] =>  0:04
@@ -288,6 +290,13 @@ New links:
 - https://www.dropbox.com/s/28uz0mqvih5g3su/dogen_deps_clang_7_3_0_osx_amd64.tar.bz2
 - https://www.dropbox.com/s/axf22srjkiltvr7/dogen_deps_gcc_5.3_linux_amd64_v8.bz2
 - https://www.dropbox.com/s/ntz6moq7kg9a8m7/dogen_deps_vc14_windows_amd64_v4.7z
+
+*** STARTED Create a UML profile to formalise yarn concepts            :epic:
+    CLOCK: [2017-03-17 Fri 15:21]--[2017-03-17 Fri 15:44] =>  0:23
+
+We should define all of the available stereotypes by creating a UML
+profile. This allows specialising the UML meta-model via
+stereotypes. The profile should help clarify Dogen's design.
 
 *** STARTED Check for incompatibility between input language and enabled kernels :story:
     CLOCK: [2017-03-06 Mon 22:20]--[2017-03-06 Mon 22:31] =>  0:11
